update webhook endpoint to vercel api

--- a/public/orcamento.html
+++ b/public/orcamento.html
@@ -95,7 +95,7 @@ textarea{min-height:110px;resize:vertical}
 </div>
 
 <script>
-const endpoint = "http://104.131.117.83:8000/webhook";
+const endpoint = "/api/webhook";
 
 document.getElementById("formOrcamento").addEventListener("submit", async (e) => {
   e.preventDefault();
